--- a/src/assets/scss/boostrap.scss
+++ b/src/assets/scss/boostrap.scss
@@ -1,3 +1,3 @@
-$theme-colors: (
-  "primary": $primary,
-);
+$enable-rounded: false;
+$input-focus-box-shadow: none;
+$input-btn-focus-box-shadow: none;
