--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,6 @@
+[data-bs-theme="dark"] {
+    color-scheme: dark;
+}
 @import '_variables';
 @import 'bootstrap';
 @import '~bootstrap/scss/bootstrap';
