--- a/src/assets/scss/__variables-light.scss
+++ b/src/assets/scss/__variables-light.scss
@@ -1,2 +1,4 @@
-$primary: #fdcf00;
-$secondary: #144002;
+// Variables for light theme
+$l-primary-color: #a2f20c;
+$l-secondary-color: #333333;
+$l-text-color: #666666;
