--- a/src/assets/scss/__variables-dark.scss
+++ b/src/assets/scss/__variables-dark.scss
@@ -1,2 +1,4 @@
-$primary: #fd0000;
-$secondary: #ed2101;
+// Dark theme variables
+$d-primary-color: #ed0505;
+$d-secondary-color: #f5f5f5;
+$d-text-color: #cccccc;
