--- a/src/assets/scss/__variables-light.scss
+++ b/src/assets/scss/__variables-light.scss
@@ -1,4 +1,4 @@
 // Variables for light theme
-$l-primary-color: #a2f20c;
-$l-secondary-color: #333333;
-$l-text-color: #666666;
+$primary: #ffffff;
+$secondary: #f3f3f3;
+$text-color: #000000;
