--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,15 +1,11 @@
 // All variables
 @import '_variables';
-// Handling the different themes
-[data-bs-theme="dark"] {
-    background-color: $d-primary-color;
-    $primary: $d-primary-color;
-}
-[data-bs-theme="light"] {
-    background-color: $l-primary-color;
-    $primary: $l-primary-color;
-}
-$primary: $d-primary-color;
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Handling the different themes : TODO
+[data-bs-theme="dark"] {
+    color-scheme: dark;
+}
+[data-bs-theme="light"] {
+    color-scheme: light;
+}
