--- a/src/assets/scss/__variables-dark.scss
+++ b/src/assets/scss/__variables-dark.scss
@@ -1,4 +1,4 @@
 // Dark theme variables
-$d-primary-color: #ed0505;
-$d-secondary-color: #f5f5f5;
-$d-text-color: #cccccc;
+$primary: #000000;
+$secondary: #333333;
+$text-color: #ffffff;
