working users list

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,3 +9,9 @@
 [data-bs-theme="light"] {
     color-scheme: light;
 }
+// Popping font import
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+// Custom styles
+body {
+    font-family: 'Poppins', sans-serif;
+}
