--- a/src/assets/scss/__variables.scss
+++ b/src/assets/scss/__variables.scss
@@ -2,3 +2,7 @@
 $enable-rounded: false;
 $input-focus-box-shadow: none;
 $input-btn-focus-box-shadow: none;
+// Validation
+// disable validation icons and colors
+$form-feedback-valid-color: black;
+$form-feedback-valid-icon: none;
