--- a/src/assets/scss/__global.scss
+++ b/src/assets/scss/__global.scss
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
-footer{
+
+footer {
     margin-top: auto;
 }
-label.required:after{
+
+label.required:after {
     content: "*";
     color: red;
+}
+
+.pre-line {
+    white-space: pre-line;
 }
