--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,8 +2,7 @@
 @import '__variables';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-// Handling the different themes : TODO
-// theme styles
+// theme styles : TODO
 @import '__themes';
 // global styles
 @import '__global';
