--- a/src/assets/scss/__variables.scss
+++ b/src/assets/scss/__variables.scss
@@ -19,6 +19,7 @@ $card-border-radius: 0;
 $carousel-control-border-radius: 0;
 $close-font-size: 0;
 $toast-border-radius: 0;
+$nav-tabs-border-radius: 0;
 // Form variables
 $input-focus-box-shadow: none;
 $input-btn-focus-box-shadow: none;
