--- a/src/assets/scss/__global.scss
+++ b/src/assets/scss/__global.scss
@@ -40,3 +40,7 @@ label.required:after {
 .select2-container--bootstrap-5 .select2-selection--multiple .select2-selection__rendered .select2-selection__choice {
     border-radius: 0;
 }
+
+.select2-container--bootstrap-5 .select2-dropdown .select2-search .select2-search__field {
+    border-radius: 0;
+}
