reply to comment

--- a/src/assets/scss/__global.scss
+++ b/src/assets/scss/__global.scss
@@ -12,6 +12,10 @@ footer {
     margin-top: auto;
 }
 
+.form-check-input[type=checkbox] {
+    border-radius: 0;
+}
+
 // Form
 label.required:after {
     content: "*";
