--- a/src/assets/scss/variables/__radius.scss
+++ b/src/assets/scss/variables/__radius.scss
@@ -1,4 +1,4 @@
-// Rounded corners variables
+// Radius variables
 $enable-rounded: false;
 $btn-border-radius: 0;
 $input-border-radius: 0;
@@ -20,6 +20,3 @@ $carousel-control-border-radius: 0;
 $close-font-size: 0;
 $toast-border-radius: 0;
 $nav-tabs-border-radius: 0;
-// Form variables
-$input-focus-box-shadow: none;
-$input-btn-focus-box-shadow: none;
