--- a/src/assets/scss/global/__typography.scss
+++ b/src/assets/scss/global/__typography.scss
@@ -1,4 +1,10 @@
 // Typography
+a {
+    text-decoration: none;
+    &:hover {
+        text-decoration: underline;
+    }
+}
 .pre-line {
     white-space: pre-line;
 }
