--- a/src/assets/scss/global/__forms.scss
+++ b/src/assets/scss/global/__forms.scss
@@ -7,3 +7,11 @@ label.required:after {
     content: "*";
     color: red;
 }
+
+.btn-primary {
+    color: #fff;
+
+    &:hover {
+        color: #fff;
+    }
+}
