--- a/src/assets/scss/global/__typography.scss
+++ b/src/assets/scss/global/__typography.scss
@@ -23,9 +23,9 @@ a {
 
 .navbar-brand {
     font-size: 1.5rem;
-    font-weight: 800;
+    font-weight: 900;
     line-height: 1.2;
-    letter-spacing: -0.05em;
+    letter-spacing: -2px;
 }
 
 h1 {
