--- a/src/assets/scss/global/__layout.scss
+++ b/src/assets/scss/global/__layout.scss
@@ -1,4 +1,3 @@
-// Layout
 // Body
 body {
     font-family: 'Poppins', sans-serif;
@@ -16,6 +15,44 @@ footer {
 .nav-tabs {
     overflow-x: auto;
     overflow-y: hidden;
+}
+
+.navbar-toggler {
+    border: none;
+    outline: none;
+
+    i {
+        font-size: 2rem;
+    }
+
+    &:hover {
+        background: transparent;
+    }
+
+    &:focus {
+        background: transparent;
+        border: none;
+        outline: none;
+        box-shadow: none;
+    }
+}
+
+@media screen and (max-width: 1199px) {
+    .navbar-nav {
+        width: 100%;
+    }
+
+    .nav-item {
+        border-bottom: 1px solid #e9ecef;
+
+        span {
+            border: none !important;
+        }
+    }
+
+    .profile-item {
+        border: none;
+    }
 }
 
 // Scroll bar
@@ -54,5 +91,14 @@ footer {
     .no-shadow-lg {
         box-shadow: none !important;
         border: none !important;
+    }
+}
+
+// TO SORT
+.bg-primary {
+    color: #fff !important;
+
+    btn {
+        color: #fff !important;
     }
 }
