--- a/src/assets/scss/global/__typography.scss
+++ b/src/assets/scss/global/__typography.scss
@@ -28,11 +28,16 @@ a {
     letter-spacing: -2px;
 }
 
+.text-white {
+    color: #fff !important;
+}
+
 h1 {
     font-size: 2.5rem;
     font-weight: 800;
     line-height: 1.2;
     letter-spacing: -0.05em;
+    text-transform: uppercase;
 
     &:before {
         content: "";
@@ -42,7 +47,5 @@ h1 {
         height: 10px;
         vertical-align: middle;
         margin-right: 10px;
-        
-
     }
 }
