--- a/src/assets/scss/variables/__radius.scss
+++ b/src/assets/scss/variables/__radius.scss
@@ -1,22 +1,22 @@
 // Radius variables
 $enable-rounded: false;
-$btn-border-radius: 0;
-$input-border-radius: 0;
-$dropdown-border-radius: 0;
-$nav-border-radius: 0;
-$pagination-border-radius: 0;
-$progress-border-radius: 0;
-$tooltip-border-radius: 0;
-$popover-border-radius: 0;
-$modal-content-border-radius: 0;
-$alert-border-radius: 0;
-$panel-border-radius: 0;
-$thumbnail-border-radius: 0;
-$badge-border-radius: 0;
-$jumbotron-border-radius: 0;
-$list-group-border-radius: 0;
-$card-border-radius: 0;
-$carousel-control-border-radius: 0;
-$close-font-size: 0;
-$toast-border-radius: 0;
-$nav-tabs-border-radius: 0;
+$btn-border-radius: 0.25rem;
+$input-border-radius: 0.25rem;
+$dropdown-border-radius: 0.25rem;
+$nav-border-radius: 0.25rem;
+$pagination-border-radius: 0.25rem;
+$progress-border-radius: 0.25rem;
+$tooltip-border-radius: 0.25rem;
+$popover-border-radius: 0.25rem;
+$modal-content-border-radius: 0.25rem;
+$alert-border-radius: 0.25rem;
+$panel-border-radius: 0.25rem;
+$thumbnail-border-radius: 0.25rem;
+$badge-border-radius: 0.25rem;
+$jumbotron-border-radius: 0.25rem;
+$list-group-border-radius: 0.25rem;
+$card-border-radius: 0.25rem;
+$carousel-control-border-radius: 0.25rem;
+$close-font-size: 0.25rem;
+$toast-border-radius: 0.25rem;
+$nav-tabs-border-radius: 0.25rem;
