--- a/src/assets/scss/global/__typography.scss
+++ b/src/assets/scss/global/__typography.scss
@@ -49,3 +49,11 @@ h1 {
         margin-right: 10px;
     }
 }
+
+h2 {
+    font-size: 2rem;
+    font-weight: 800;
+    line-height: 1.2;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+}
