--- a/src/assets/scss/global/__typography.scss
+++ b/src/assets/scss/global/__typography.scss
@@ -1,10 +1,13 @@
 // Typography
 a {
     text-decoration: none;
-
     &:hover {
         text-decoration: underline;
     }
+}
+
+.dropdown-item:hover {
+    text-decoration: none !important;
 }
 
 .link {
